Falta mostrar bien la busqueda

--- a/Unidad 5 Lab/Unidad 5 Lab.csproj
+++ b/Unidad 5 Lab/Unidad 5 Lab.csproj
@@ -179,6 +179,7 @@
     <Content Include="Views\Informacion\Busqueda.cshtml" />
     <Content Include="Views\Informacion\Faltantes.cshtml" />
     <Content Include="Views\Informacion\MostrarListas.cshtml" />
+    <Content Include="Views\Informacion\Actualizacion.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
